Index prices can now have buy and sell values. Personal index is now created automaticly by api-loader.py. Bug with legitimate duplicate transaction fixed. (When one user bought from themselves or another user.) Item views will now show personal prices instead of market index if both exist. Fixed bug with refresh time on POSes not showing. Lots of updates to MarketIndex class to support per-profile indexes. UserProfile.get_index(item) and UserProfile.update_personal_index() created to support personal indexes. api-loader.py will now regenerate personal indexes and purge old transaction data. mineral-loader.py updateed for new index formats.

--- a/_static/iphone.css
+++ b/_static/iphone.css
@@ -99,8 +99,14 @@ th {
 	color: grey;
 }
 
-.item .index {
+ul.links span.index-buy {
+	color: red;
+	font-size: 12px;
+}
+
+ul.links span.index-sell {
 	color: green;
+	font-size: 12px;
 }
 
 .item .description {
@@ -519,6 +525,7 @@ ax {
     /* min-height: 418px; */
     margin: 0;
     padding: 0;
+    border-top: 1px solid #E0E0E0;
 }
 
 .links li {
